# vecdb

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md  mkdocs.yml  modules.md  usage.md
src/vecdb/: __init__.py  cli.py
src/vecdb/core/: db.py
src/vecdb/utils/: embeddings.py  file_utils.py
